--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MinsuGPT | Security Gateway</title>
+    <title>MinsuGPT | 접속패널</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
@@ -30,7 +30,6 @@
             color: var(--text-black); 
         }
 
-        /* 로그인 컨테이너 */
         #login-container { 
             width: 100%; 
             max-width: 420px; 
@@ -50,7 +49,6 @@
             color: var(--primary-black);
         }
 
-        /* 안내 문구 스타일 */
         .warning-box {
             background: rgba(0, 0, 0, 0.03);
             border: 1px solid var(--primary-black);
@@ -72,7 +70,6 @@
             line-height: 1.5;
         }
 
-        /* 입력창 디자인 */
         .input-field {
             width: 100%; padding: 16px; font-size: 15px; border: 1px solid #ddd;
             border-radius: 10px; margin-bottom: 12px; outline: none; transition: all 0.3s;
@@ -83,7 +80,6 @@
             box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.05); 
         }
 
-        /* 로그인 실패 인라인 메시지 */
         #login-error { color: #ff3b30; font-size: 13px; margin-bottom: 12px; display: none; font-weight: 600; }
 
         .submit-btn {
@@ -93,7 +89,6 @@
         }
         .submit-btn:hover { background-color: var(--hover-black); }
 
-        /* 포털 UI */
         #main-portal { display: none; width: 100%; max-width: 500px; padding: 20px; animation: fadeIn 0.8s ease; }
         .portal-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin: 20px 0; }
         .portal-card {
@@ -102,12 +97,10 @@
         }
         .portal-card:hover { border-color: var(--primary-black); transform: translateY(-3px); }
 
-        /* 로딩 바 애니메이션 */
         #loading-overlay { display: none; margin-bottom: 20px; }
         .progress-container { width: 100%; height: 8px; background: #eee; border-radius: 10px; overflow: hidden; margin-top: 10px; }
-        .progress-bar { width: 0%; height: 100%; background: var(--primary-black); transition: width 1.5s cubic-bezier(0.4, 0, 0.2, 1); }
+        .progress-bar { width: 0%; height: 100%; background: var(--primary-black); }
 
-        /* 모달 스타일 */
         #modal-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.4); z-index: 1000; justify-content: center; align-items: center; backdrop-filter: blur(4px); }
         .modal { background: white; padding: 30px; border-radius: 20px; width: 320px; text-align: center; border-top: 6px solid var(--primary-black); }
         .modal-btn { background: var(--primary-black); color: white; border: none; padding: 12px 24px; border-radius: 8px; margin-top: 20px; cursor: pointer; font-weight: 600; }
@@ -217,9 +210,17 @@
         function startRedirect(url) {
             const overlay = document.getElementById("loading-overlay");
             const bar = document.getElementById("progress-bar");
+            
+            // 상태 강제 초기화
+            bar.style.transition = "none";
+            bar.style.width = "0%";
             overlay.style.display = "block";
             
-            setTimeout(() => { bar.style.width = "100%"; }, 50);
+            // 약간의 지연 후 애니메이션 재시작
+            setTimeout(() => { 
+                bar.style.transition = "width 1.5s cubic-bezier(0.4, 0, 0.2, 1)";
+                bar.style.width = "100%"; 
+            }, 50);
 
             setTimeout(() => {
                 window.location.href = url;
